--- a/remerciements.tex
+++ b/remerciements.tex
@@ -18,6 +18,9 @@
 
 En premier lieu, je voudrais adresser ici mes plus vifs remerciements 
 
+
+Lionel Zoubritzky pour les discussions algorithmiques très florissantes.
+
 \endgroup
 
 \clearpage
