--- a/thesis.bib
+++ b/thesis.bib
@@ -4005,3 +4005,15 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {Evaluation of Ideal Adsorbed Solution Theory as a Tool for the Design of Metal{\textendash}Organic Framework Materials},
 	journal = {Ind. Eng. Chem. Res.}
 }
+@article{Lin_2005,
+	doi = {10.1103/physrevlett.94.216001},
+	url = {https://doi.org/10.1103%2Fphysrevlett.94.216001},
+	year = 2005,
+	month = {jun},
+	publisher = {American Physical Society ({APS})},
+	volume = {94},
+	number = {21},
+	author = {Binhua Lin and Mati Meron and Bianxiao Cui and Stuart A. Rice and Haim Diamant},
+	title = {From Random Walk to Single-File Diffusion},
+	journal = {Phys. Rev. Lett.}
+}
