--- a/0-intro.tex
+++ b/0-intro.tex
@@ -26,6 +26,9 @@ All the approaches described above can have good accuracy in the prediction of l
 
 This thesis presents my work on the 
 
+
+PSA for separation most commonly used: selectivity, working capacity, regenerability (kinetics and energy used to regenerate the material i.e., empty the pores for another cycle).\autocite{Kumar_1994}
+
 \vfill
 \begin{center}
     \pgfornament[width=6cm,color=CTsemi]{75}
