--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -8,15 +8,15 @@
 
 \section{Limits of the Current Screening Methodologies}
 
-As presented in our review of the different screening methodologies in the chapter 1, it is very common to screen for one particular metric whether it is the selectivity or the permselectivity or the capacity depending on the targeted application. Attempts of screening that searches for the most selective materials but combined with a good capacity are more and more common.\autocite{Chung_2019,Zhang_2022,Solanki_2020} If we take the problem of the selectivity screening, many improvements can be made in terms of calculation efficiency, or in terms of correctness of the molecular description. In the previous chapters, I mostly focused on the gain in efficiency by exploring many adsorption energy sampling techniques and by comparing their computational time as well as their accuracy. But I also started to incorporate other properties to the screening procedure by exploring the transport properties for instance. And in an effort to always aim at better efficiency, I explored alternative calculation strategies in addition to the more standard ones. 
+As presented in our review of the different screening methodologies in the chapter 1, it is very common to screen for one particular metric whether it is the selectivity or the permselectivity or the capacity depending on the targeted application. Attempts of screening that searches for the most selective materials but combined with a good capacity are more and more common.\autocite{Chung_2019,Zhang_2022,Solanki_2020} If we take the problem of the selectivity screening, many improvements can be made in terms of calculation efficiency, or in terms of correctness of the molecular description. In the previous chapters, I mostly focused on the gain in efficiency by exploring many adsorption energy sampling techniques and by comparing their computational time  and their accuracy. But I also started to incorporate other properties to the screening procedure by exploring the transport properties for instance. And improve even more the efficiency, I explored alternative calculation strategies besides the more standard ones. 
 
-To further improve the shortcomings of the current adsorption screening methodologies, we need to explore even more material properties. For example, the rigidity of the structures in most of the screening procedures could sometimes mislead toward materials that appear to have a very high selectivity, whereas the flexible nature of the material tend to lower the calculated selectivity. By taking into account flexibility, one could completely change the rankings found by the screening and hence finding other maybe better materials through this new approach. The other property that could completely change the results obtained by current methodologies is the polarization. For adsorbates like xenon and krypton, the difference in polarizability is in fact at the origin of the separability of these gas using an adsorbent material. A better description of this particular property can in fact completely change the results of the screening. If we look at the best experimental materials, they are either decorated with polar groups like in the article~\cite{Li_2019} or they present open metal sites like in the article~\cite{Pei_2022}. However, we do not find these criteria as being essential when looking at the results of the current screenings. 
+To overcome the shortcomings of the current adsorption screening methodologies, we need to explore even more material properties. For example, the rigidity of the structures in most of the screening procedures could sometimes mislead toward materials that appear to have a very high selectivity, whereas the flexible nature of the material tend to lower the calculated selectivity. By taking into account flexibility, one could completely change the rankings found by the screening and hence finding other maybe better materials through this new approach. The other property that could completely change the results obtained by current methodologies is the polarization. For adsorbates like xenon and krypton, the difference in polarizability is in fact at the origin of the separability of these gas using an adsorbent material. A better description of this particular property can in fact completely change the results of the screening. If we look at the best experimental materials, they are either decorated with polar groups like in the article~\cite{Li_2019} or they present open metal sites like in the article~\cite{Pei_2022}. However, we do not find these criteria as being essential when looking at the results of the current screenings. 
 
 In this final chapter, I want to discuss three main research focuses: (i) the calculation of transport properties that could be further optimized, (ii) the adsorption calculations in flexible frameworks, and (iii) the better description of the polarization in the energy calculations.
 
 \section{Future Developments on Transport Properties}
 
-Transport properties were thoroughly studied using MD simulations and an ML model mainly based on the PLD and a proxy of the diffusion activation energy. This approach gives very promising results since it speeds up considerably the evaluation of diffusion coefficient values. However, the generalizability to other types of system is not guaranteed when using an ML-based approach. To create a simulation that would be faster than MD simulations and more accurate than the MD-based approach, we will finish the development of the diffusion coefficeint calculation code based on the transition state theory and on kinetic Monte Carlo simulations. As explained in the previous chapter, we are at the last step of the development. When developed, this new approach can give diffusion coefficient that could be fed into a breakthrough modelization tool in order to compare to experimental data. In this seciton I will also talk about the perspectives opened up by the new RUPTURA software in terms of experiment-theory comparison.
+Transport properties were thoroughly studied using MD simulations and an ML model mainly based on the PLD and a proxy of the diffusion activation energy. This approach gives very promising results since it speeds up considerably the evaluation of diffusion coefficient values. However, the generalizability to other types of system is not guaranteed when using an ML-based approach. To create a simulation that would be faster than MD simulations and more accurate than the MD-based approach, we will finish the development of the diffusion coefficient calculation code based on the transition state theory and on kinetic Monte Carlo simulations. As explained in the previous chapter, we are at the last step of the development. When developed, this new approach can give diffusion coefficient that could be fed into a breakthrough modelization tool in order to compare to experimental data. In this section, I will also talk about the perspectives opened up by the new RUPTURA software in terms of experiment-theory comparison.
 
 \subsection{Final development of the optimized version of TuTraST}
 
@@ -25,24 +25,33 @@ the detection of channels using a simple all-direction scanning algorithm on the
 
 To finish the implementation of the algorithm, the final step is to be able to detect the transition state surfaces that separate different clusters. This final mapping into basins connected by transition surfaces can then be used to run a simple kinetic Monte Carlo scheme and determine the diffusion coefficient. In the original paper of Mace et al.\autocite{Mace_2019}, the authors make the clusters with energy values below $E\e{min}+i\delta E$ grow layer by layer to clusters with energy values below $E\e{min}+(i+1)\delta E$. When a point of a layer of one cluster touches another cluster, this point can be considered as a transition point if the energy gap is high enough, else the two clusters merge together to form a unique cluster. The reason to use a loop over the energy values is to control the values of the transition points they can only between $E\e{min}+(i)\delta E$ and $E\e{min}+(i+1)\delta E$. If we think about it, the layer-by-layer growth does not find the highest energy point in a given direction as normally defined for transition states, instead they detect the points that are equidistant to the surface of two previous clusters. Both definitions are equivalent if $\delta E$ is infinitely small.
 
-To avoid using a computationally expensive layer-by-layer growth, it could be possible to assign a label according to the distance 
+To avoid using a computationally expensive layer-by-layer growth, it could be possible to assign a label using a breadth-first search to find. The boundary points between two connected components would be defined as the points that are ``equidistant'' to the clusters. The definition of equidistant depends ont the definition of the distance. I can either be directly defined using the grid cells, which corresponds to the Manhattan distance. This distance could be sensitive to the deformation of the unit cell. To use the cartesian distance, we would need to save a coordinate grid and implement a bucket queue based on the cartesian distances instead of a standard queue (as presented in section~\ref{sct:tutrast}).
 
+In the end of the thesis, I will be studying the different approaches: layer-by-layer growth, breadth-first search with a standard queue or a bucket queue prioritized using the cartesian distance, and compare their time and accuracy performance.
 
 \subsection{Connection to the breakthrough experiments}
 
+To test the relevance of the diffusion coefficient calculated by these methods, we need to be able to compare with experimental data. However, it is hard to directly access the diffusion coefficient inside a nanoporous material. The kinetic performance can only be glimpsed by analyzing the shape of the experimental breakthrough curves. If we can generate these breakthrough curves using diffusion coefficients as input, it could be possible to confirm or invalidate the results of our calculations.
+
+A breakthrough curve can be broken down into three different zones: an unsaturated zone, a mass transfer zone and a saturated zone as shown on the Figure~\ref{fgr:breakthrough_zones}. Sharma et al. developed a tool to generate breakthrough curves based on adsorption quantities taken from a isotherm fit, and mass transfer properties such as the self-diffusion coefficient and material surface diffusion (Knudsen diffusion).\autocite{Sharma_2023} This tool can potentially be used to generate breakthrough curves and compare it to experimental curves. If the isotherm fitting properties come from experimental calculation, then the only variable can only be the mass transfer term. In this case, this tool can be used a qualitative way of validating a calculated self-diffusion coefficient value.
+
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.4\textwidth]{figures/6-perspectives/sbmof_breakthrough.jpg}
-  \caption{ Experimental breakthrough curves in SBMOF-1 for a gas mixture with 400 ppm Xe and 40 ppm Kr balanced with dry air. Reprinted with permission from Ref.~\cite{Banerjee_2016} copyright \copyright\ 2016 Springer Nature. }\label{fgr:sbmof_breakthrough}
+  \begin{subfigure}[b]{0.5\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/6-perspectives/breakthrough_cuve_zones.png}
+    \caption{Breakthrough curve zones}\label{fgr:breakthrough_zones}
+  \end{subfigure}
+  \hfill
+  \begin{subfigure}[b]{0.4\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/6-perspectives/sbmof_breakthrough.jpg}
+    \caption{SBMOF-1 experimental breakthrough}\label{fgr:sbmof_breakthrough}
+  \end{subfigure}
+  \caption{ (a) Different zones in a breakthrough curve reprinted with permission from the Ref.~\cite{Sharma_2023} copyright \copyright\ 2023 Taylor \& Francis Group\todo{?}. (b) Experimental breakthrough curves in SBMOF-1 for a gas mixture with 400 ppm Xe and 40 ppm Kr balanced with dry air. Reprinted with permission from Ref.~\cite{Banerjee_2016} copyright \copyright\ 2016 Springer Nature. }\label{fgr:breakthrough}
 \end{figure}
 
-Diffusion coefficients 
-
-RUPTURA, breakthrough curve
-\todo{one test with SBMOF-1 (experimental?)}
-Discuss the different parameters, and their relevance.
-
-PSA for separation most commonly used: selectivity, working capacity, regenerability (kinetics and energy used to regenerate the material i.e., empty the pores for another cycle).\autocite{Kumar_1994}
+On the example of SBMOF-1, we can see that there is only a visible mass transfer zone for \ce{CO2}. It suggests that there is a diffusion limitation for this adsorbate in the SBMOF-1 material. However, we do not see any diffusion limitation for xenon as previously suggested by the diffusion coefficient calculated by an MD simulation ($3\times 10^{-8}$\si{\square\cm\per\s}). In the next chapter, we will propose an explanation for this discrepancy between the experimental and simulated values.
 
 \section{Screening flexible materials}
 
@@ -80,7 +89,7 @@ To model the dynamics of the framework, Witman et al.\ use the UFF forcefield to
 
 If we now focus on the issue of flexibility in KAXQIL, the authors used several methods to evaluate its effect on the Xe and Kr Henry constants and the Xe/Kr selectivity. For instance, they used another description of the metal--ligand bond using a cationic dummy model (UFF-CDM) and an \emph{ab initio} MD simulation using the PBE DFT function,\autocite{Perdew_1996} with a Grimme's D3 van der Waals correction\autocite{Grimme_2010} (PBE+D3). Each of these three methods are used to generate about $30$ snapshots that were eventually used to determine the flexible framework's adsorption properties for KAXQIL.
 
-The authors found that the lower experimental selectivity value of $16$ compared to the UFF-determined one could be partially explained by a flexibility effect. The selectivity evaluated on a rigid SBMOF-1 structure using the standard UFF forcefield is way higher than the one obtained when considering snapshots of a vibrating structure. The \emph{ab initio} MD method that should be the closest to the actual dynamics does not recover the whole phenomenon because of the system size dependence. To actually see the crystallographic deformations, multiple unit cell replications are usually necessary. Moreover, the UFF forcefield used does not give a perfect picture of the interaction energies at play in the system neither. But an overall trend is, however, drawn in this study since it is possible to attribute the discrepancies between experimental and theoretical data to the rigidity hypothesis.
+The authors found that the lower experimental selectivity value of $16$ compared to the UFF-determined one could be partially explained by a flexibility effect. The selectivity evaluated on a rigid SBMOF-1 structure using the standard UFF forcefield is way higher than the one obtained when considering snapshots of a vibrating structure. The \emph{ab initio} MD method that should be the closest to the actual dynamics does not recover the whole phenomenon because of the system size dependence. To see the crystallographic deformations, multiple unit cell replications are usually necessary. Moreover, the UFF forcefield does not give a perfect picture of the interaction energies at play in the system. But an overall trend is, however, drawn in this study since it is possible to attribute the discrepancies between experimental and theoretical data to the rigidity hypothesis.
 
 \begin{table}[t]
   \centering
@@ -263,18 +272,17 @@ This new method is based on the procedure developed by Lachet et al.\autocite{La
 \begin{equation}
   U\e{ind} = -\frac{1}{2} \sum_{i=1}^{N} \boldsymbol{\mu}_i \cdot \mathbf{E}_i^0
 \end{equation}
-where $\boldsymbol{\mu}_i$ is the induced dipole, and $\mathbf{E}_i^0$ is the electric field created by the surrounding atoms' partial charges on the particle $i$. Since the induced dipole also interacts with the surrounding induced dipoles $j\neq i$, the induced dipole is usually calculated using a back-propagation algorithm as described in the Ref.~\cite{Lachet_1998}. However, back-propagation was found to only account for less than {5\%} of the total induction energy. For this reason the equation can be simplified to the simple interaction between the induced dipole and the surrounding electric field without taking into account the induced-dipole--induced-dipole interactions. Moreover, by skipping the bacpropagation step, we can save valuable computation time in a screening. The induction energy can then be simply expressed as follows:
+where $\boldsymbol{\mu}_i$ is the induced dipole, and $\mathbf{E}_i^0$ is the electric field created by the surrounding atoms' partial charges on the particle $i$. Since the induced dipole also interacts with the surrounding induced dipoles $j\neq i$, the induced dipole is usually calculated using a back-propagation algorithm as described in the Ref.~\cite{Lachet_1998}. However, back-propagation was found to only account for less than {5\%} of the total induction energy. For this reason the equation can be simplified to the simple interaction between the induced dipole and the surrounding electric field without taking into account the induced-dipole--induced-dipole interactions. Moreover, by skipping the back-propagation step, we can save valuable computation time in a screening. The induction energy can then be simply expressed as follows:
 
 \begin{equation}
   U\e{ind} = -\frac{1}{2} \sum_{i=1}^{N} \alpha_i {\left\lvert\mathbf{E}_i^0\right\rvert}^2
 \end{equation}
 
-Since a part of the induction energy is already contained in the Lennard-Jones potential, the authors rescaled the LJ parameters to remove the induction part from the LJ energy. This part seems to be system-dependent and could in fact be questionable since we can use it to fit to experimental data without solid theoretical reasons to back it. To do it preperly, one should design a forcefield around this concept in order to tweak the LJ-parameters according to a given experimental data as it is usually done in any forcefield development. 
+Since a part of the induction energy is already contained in the Lennard-Jones potential, the authors rescaled the LJ parameters to remove the induction part from the LJ energy. This part seems to be system-dependent and could in fact be questionable since we can use it to fit to experimental data without solid theoretical reasons to back it. To do it properly, one should design a forcefield around this concept in order to tweak the LJ-parameters according to a given experimental data as it is usually done in any forcefield development. 
 
-If we manage to adapt this method to the xenon/krypton separation case, it could be possible to carry out screenings that find materials comparable to ZJU-74a-Pd. To further optimize the screening approach, we could also find materials with a certain pore size and that contain open metal sites within a database, and then evaluate this restricted list using higher-level methods. 
+If we manage to customize this method to the xenon/krypton separation case, it could be possible to carry out screenings that find materials comparable to ZJU-74a-Pd. To further optimize the process, we can reduce the number of materials by restricting the screening process to a certain pore size and that contains open metal sites within a database, and then evaluate this restricted list using higher-level methods. 
 
 \todo{Estimate the induction energy for ZJU and squarate}
-
 
 \OnlyInSubfile{\printglobalbibliography}
 
